# poseidon-rust

./: Cargo.toml  README.md
src/: error.rs  lib.rs  parameters.rs  poseidon.rs
src/bn254/: circom_t3.rs  circom_t4.rs  mod.rs  parameters.sage
